# Dr-lingo

./: .pre-commit-config.yaml  .ruff.toml  README.md  docker-compose.yml
client/: .eslintrc.json  README.md  index.html  package-lock.json  package.json  vite.config.js
client/src/: App.tsx  index.css
client/src/api/: ApiClient.ts  HttpClient.ts  routes.ts
client/src/api/services/: AdminService.ts  AuthService.ts  ChatService.ts  ItemService.ts  RAGService.ts
client/src/components/: AddPatientContext.tsx  ChatRoomList.tsx  ItemList.tsx  PatientContextManager.tsx  TranslationChat.tsx
client/src/components/admin/: AdminDashboard.tsx  ChatRoomManagement.tsx  CollectionManagement.tsx  KnowledgeBaseManagement.tsx  PatientContextManagement.tsx  TaskMonitor.tsx  UserManagement.tsx  index.ts
client/src/components/auth/: LoginForm.tsx  OTPSetup.tsx  ProtectedRoute.tsx  RegisterForm.tsx  UserMenu.tsx  index.ts
client/src/contexts/: AuthContext.tsx
client/src/hooks/: useAIConfig.ts
client/src/pages/: AdminPage.tsx  AuthPage.tsx  NotFoundPage.tsx  ProfilePage.tsx  TranslationChatPage.tsx
client/src/types/: chat.ts  collection.ts  common.ts  index.ts  item.ts  user.ts
services/: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  pyproject.toml  requirements-docker.txt  requirements.txt
services/api/: admin.py  apps.py  auth.py  gemini_service.py  middleware.py  models.py  permissions.py  rag_service.py  rag_views.py  serializers.py  urls.py  views.py
services/api/admin/: __init__.py  chat.py  item.py  rag.py  user.py
services/api/events/: __init__.py  access.py  bus_registry.py  events.py  message_bus_factory.py  publisher.py  subscriber.py
services/api/events/consumers/: __init__.py  base.py  rabbitmq.py
services/api/events/producers/: __init__.py  base.py  rabbitmq.py
services/api/management/commands/: import_hf_dataset.py  run_event_consumer.py  seed_data.py
services/api/migrations/: 0001_initial.py  0001_user.py  0002_chatroom_alter_item_options_item_updated_at_and_more.py  0002_collection.py  0003_chatroom.py  0003_collection_collectionitem.py  0004_chatmessage.py  0004_chatmessage_audio_duration_chatmessage_audio_file_and_more.py  0005_chatroom_patient_name_chatroom_rag_collection.py  0005_collectionitem.py  0006_userprofile.py  0007_item.py  0008_collection_type.py  0009_knowledge_bases_m2m.py  0010_chatmessage_tts_audio.py  0011_alter_collection_completion_model_and_more.py  0012_alter_collection_chat_room.py
services/api/models/: __init__.py  chat.py  item.py  rag.py  user.py
services/api/serializers/: __init__.py  chat.py  item.py  rag.py  user.py
services/api/services/: __init__.py  gemini_service.py  rag_service.py  tts_service.py
services/api/services/ai/: __init__.py  base.py  factory.py  gemini_provider.py  ollama_provider.py
services/api/tasks/: __init__.py  assistance_tasks.py  audio_tasks.py  cleanup_tasks.py  pdf_tasks.py  rag_tasks.py  translation_tasks.py  tts_tasks.py
services/api/utils/: pdf_utils.py
services/api/views/: __init__.py  auth.py  chat.py  health.py  item.py  rag.py
services/config/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
services/whisper/: Dockerfile
